--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ body:not(.white-bg) nav a:hover {
         width: 100%;
         justify-content: flex-start;
         gap: 10px;
-        padding: 10px 0;        /* Adds spacing between links */
+        padding: 10px 0;       
     }
 
     nav a {
